--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8"/>
 
-    <title>Minecraft Classic 0.0.23a_01</title>
+    <title>Minecraft 0.0.23a</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google" content="notranslate" />
@@ -31,7 +31,7 @@
         <!-- <div><h1 data-text="Minecraft Classic">Minecraft Classic</h1></div> -->
         <a onclick="bntClick();newGame()" class="btn"><div class="btn-text"><span data-text="Generate new level...">Generate new level...</span></div></a>
         <a class="btn disabled" id="loadBtn"><div class="btn-text"><span data-text="Load level...">Load level...</span></div></a>
-        <a class="btn disabled"><div class="btn-text"><span data-text="Play tutorial level">Play tutorial level</span></div></a>
+        <a class="btn disabled"><div class="btn-text"><span data-text="Play tutorial level">CrobyCheese</span></div></a>
 
         <a onclick="bntClick();optionsScreen()" class="btn btn-bottom"><div class="btn-text"><span data-text="Options">Options</span></div></a>
     </main>
