--- a/menu.html
+++ b/menu.html
@@ -350,9 +350,8 @@
     }
 
     var splashes = [
-        'Thank you Notch','10 years old', 'classic', 'Wine and Cookies', 'Rainbow', 'Tetris', 'Wohoo', 'Awesome', '1% sugar', '20 GOTO 10', '90% bug free', 'Ahhhhhh', 'All rumors are true', 'Aww man', 'Best in class', '(no) Buzzy Bees', 'Casual gaming', 'Check it out', 'Farlands', 'Child\'s play', 'Closed source', 'Colormatic', 'Create', 'Build', 'Sandbox', 'Déjà vu', 'doot doot', 'Fabulous graphics', 'Freaky', '/give @a hugs 64', 'Just like Linux', 'Got your nose', 'Degoogled', 'Haunted', 'Herobriners', 'HURNERJSGER?', 'I have a suggestion', 'Indev', 'Indie', 'It came from space', '100% dragon free', 'Mmmph, mmph', 'Now in 3D', 'Grass, stone', 'Now Javascript', '<3 Node.js', 'Poof', 'POG', 'Microsoft??', 'Oh man', 'Place ALL the blocks', 'Look out'
+        'Yes this is a game',"I always mod BACK","CrobyCheese","D-E-L-T-A-R-U-N-E"
     ];
-
     // Get random splash
     var randomSplash = splashes.random();
 
