--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
         <div class="logo"><img src="assets/textures/modded/logo.png"><span class="pulse splash">OK BOOMER</span></div>
         <!-- <div><h1 data-text="Minecraft Classic">Minecraft Classic</h1></div> -->
         <a onclick="bntClick();newGame()" class="btn"><div class="btn-text"><span data-text="Generate new level...">New World</span></div></a>
-        <a class="btn disabled" id="loadBtn"><div class="btn-text"><span data-text="Load level...">Load World</span></div></a>
+        <a class="btn disabled" id="loadBtn"><div class="btn-text"><span data-text="Load level...">Load level...</span></div></a>
         <a class="btn disabled"><div class="btn-text"><span data-text="Play tutorial level">CrobyCheese</span></div></a>
 
         <a onclick="bntClick();optionsScreen()" class="btn btn-bottom"><div class="btn-text"><span data-text="Options">Options</span></div></a>
